# Prism

./: Cargo.toml  README.md
apps/server/src/ws/: trace-stream.ts
apps/web/src/app/trace/: page.tsx
apps/web/src/components/trace/: ExecutionTimeline.tsx  ResourceProfile.tsx  StateDiffViewer.tsx
apps/web/src/hooks/: useTrace.ts  useWebSocket.ts
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/src/commands/: clean.rs  db.rs  decode.rs  inspect.rs  mod.rs  serve.rs
crates/cli/src/output/: human.rs  mod.rs  renderers.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/xdr/: codec.rs
docs/: INTEGRATION-GUIDE.md  websocket-flow-diagram.md
examples/: websocket-client.js
